# copilot-session-feedback

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  security-patterns.json
.github/ISSUE_TEMPLATE/: config.yml  feature.md  hitl-intervention.yml
.github/agents/: es-big-picture.agent.md  es-process-modeler.agent.md  es-software-designer.agent.md  event-storming.agent.md  implementer.agent.md  pattern-designer.agent.md  planner.agent.md  researcher.agent.md
.github/hooks/: _trace.py  notification.json  notification.py  post-compact.json  post-compact.py  post-tool-use.json  post-tool-use.py  pre-compact.json  pre-compact.py  pre-tool-use.json  pre-tool-use.py  session-end.json  session-end.py  session-start.json  session-start.py  stop.json  stop.py
.github/instructions/: adoption-roadmap.instructions.md  feedback-lenses.instructions.md  hooks.instructions.md  routing.instructions.md  rule-writing.instructions.md  success-metrics.instructions.md
.github/prompts/: apply-pattern.prompt.md  audit.prompt.md  compact.prompt.md  design-agent-system.prompt.md  design-feedback-system.prompt.md  event-storm-from-code.prompt.md  event-storm-from-requirements.prompt.md  event-storm.prompt.md  implement.prompt.md  plan.prompt.md  research.prompt.md  verify.prompt.md
.github/workflows/: ci.yml  (+7 more)
sessions/: feedback-debt.md
tests/: conftest.py  helpers.py  test_notification.py  test_post_compact.py  test_post_tool_use.py  test_pre_compact.py  test_pre_tool_use.py  test_session_end.py  test_session_start.py  test_stop.py
(+58 files in other folders)
